@@ -1,3 +1,5 @@
+* Enforce digits length on Rounding Precision on Unit of Measure
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Show all products by category
